<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- header -->
    <LinearLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/night_text"
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/favorite_screen_title"
            android:textSize="22sp"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>

    <!-- Список пуст -->
    <LinearLayout
        android:id="@+id/empty_state"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_title">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty_list" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/favorite_screen_empty_list"
            android:textSize="22sp" />
    </LinearLayout>

    <!-- Список вакансий -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/vacancyList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_title" />

    <!-- Экран ошибки -->
    <LinearLayout
        android:id="@+id/error_state"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_title">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/no_list" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ys_display_medium"
            android:maxWidth="268dp"
            android:text="@string/favorite_screen_error"
            android:textAlignment="center"
            android:textSize="22sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
