<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/workplaceFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".filter.ui.WorkplaceFragment">

    <ImageView
        android:id="@+id/backButton"
        style="@style/BackButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/screenTitle"
        style="@style/HeadingStyle"
        android:text="@string/choosing_workplace"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/countryLinerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/screenTitle">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/countryTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_60"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorPrimary"
            android:hint="@string/country"
            android:textColorHint="@color/grey"
            app:boxStrokeWidth="0dp"
            app:layout_constraintTop_toBottomOf="@+id/screenTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/countryEditText"
                style="@style/TextRegular16"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:layout_gravity="center_vertical"
                android:background="?selectableItemBackground"
                android:backgroundTint="?attr/colorPrimary"
                android:drawableTint="?attr/colorOnPrimary"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="center_vertical"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icCountryArrow"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/dp_8"
            android:background="?selectableItemBackground"
            android:scaleType="centerInside"
            android:src="@drawable/ic_right_arrow"
            app:tint="?attr/colorOnPrimary" />

        <ImageView
            android:id="@+id/icCountryClear"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/dp_8"
            android:background="?selectableItemBackground"
            android:scaleType="centerInside"
            android:src="@drawable/ic_button_clear"
            android:visibility="gone"
            app:tint="?attr/colorOnPrimary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/regionLinerLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/countryLinerLayout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/regionTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_60"
            android:layout_weight="1"
            android:backgroundTint="?attr/colorPrimary"
            android:duplicateParentState="true"
            android:gravity="center_vertical"
            android:hint="@string/region"
            android:textColorHint="@color/grey"
            app:boxStrokeWidth="0dp"
            app:layout_constraintTop_toBottomOf="@+id/countryTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/regionEditText"
                style="@style/TextRegular16"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:layout_gravity="center_vertical"
                android:background="?selectableItemBackground"
                android:backgroundTint="?attr/colorPrimary"
                android:focusable="false"
                android:inputType="none"
                android:paddingEnd="@dimen/dp_24"
                android:paddingBottom="@dimen/dp_16" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icRegionArrow"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/dp_8"
            android:duplicateParentState="true"
            android:scaleType="centerInside"
            android:src="@drawable/ic_right_arrow"
            app:tint="?attr/colorOnPrimary" />

        <ImageView
            android:id="@+id/icRegionClear"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/dp_8"
            android:scaleType="centerInside"
            android:src="@drawable/ic_button_clear"
            android:visibility="gone"
            app:tint="?attr/colorOnPrimary" />
    </LinearLayout>

    <Button
        android:id="@+id/chooseButton"
        style="@style/TextMedium16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_24"
        android:backgroundTint="@color/blue"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/choose"
        android:textAllCaps="false"
        android:textColor="@color/white_universal"
        android:visibility="gone"
        app:cornerRadius="@dimen/dp_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
