<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/industryFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <LinearLayout
        android:id="@+id/industrySelection"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/arrowBack"
            style="@style/arrow_back"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_8" />

        <TextView
            style="@style/night_text"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_26"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_weight="1"
            android:text="@string/select_Industry"
            android:textSize="@dimen/text_size_22"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/filterIndustry"
        style="@style/search_card_view_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        app:cardCornerRadius="@dimen/dp_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/industrySelection">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_60"
            app:layout_constraintTop_toBottomOf="@+id/industrySelection">

            <EditText
                android:id="@+id/editIndustry"
                style="@style/search_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_gravity="center"
                android:focusable="true"
                android:hint="@string/enter_industry"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black_universal"
                android:textSize="@dimen/text_size_16"
                tools:ignore="Autofill,RtlSymmetry,TextContrastCheck,VisualLintTextFieldSize" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButtonIndustrySearch"
            style="@style/industry_search"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_4" />

        <ImageButton
            android:id="@+id/imageButtonFilterIndustryClear"
            style="@style/filter_salary_clear"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dp_14"
            android:layout_marginEnd="@dimen/dp_16"
            android:visibility="gone" />
    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/industryList"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_17"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterIndustry"
        tools:listitem="@layout/item_industry" />

    <Button
        android:id="@+id/buttonChoose"
        style="@style/ButtonApply"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_59"
        android:layout_marginHorizontal="@dimen/dp_17"
        android:layout_marginBottom="@dimen/dp_24"
        android:backgroundTint="@color/blue"
        android:text="@string/choose"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/placeholderError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivPlaceholderError"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:scaleType="fitCenter"
            android:src="@drawable/img_no_list_country"
            app:layout_constraintDimensionRatio="328:223"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TextMedium22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/dp_48"
            android:paddingEnd="@dimen/dp_48"
            android:text="@string/no_list_country"
            app:layout_constraintEnd_toEndOf="@+id/ivPlaceholderError"
            app:layout_constraintStart_toStartOf="@+id/ivPlaceholderError"
            app:layout_constraintTop_toBottomOf="@+id/ivPlaceholderError" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/placeholderErrorIndustry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/inPlaceholderError"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:scaleType="fitCenter"
            android:src="@drawable/img_no_list_country"
            app:layout_constraintDimensionRatio="328:223"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TextMedium22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/dp_48"
            android:paddingEnd="@dimen/dp_48"
            android:text="@string/no_list_country"
            app:layout_constraintEnd_toEndOf="@+id/inPlaceholderError"
            app:layout_constraintStart_toStartOf="@+id/inPlaceholderError"
            app:layout_constraintTop_toBottomOf="@+id/inPlaceholderError" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/placeholderNoListIndustry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/inPlaceholderNoList"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:scaleType="fitCenter"
            android:src="@drawable/no_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="328:223"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TextMedium22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center_horizontal"
            android:paddingStart="@dimen/dp_48"
            android:paddingEnd="@dimen/dp_48"
            android:text="@string/no_industry_in_search"
            app:layout_constraintEnd_toEndOf="@+id/inPlaceholderNoList"
            app:layout_constraintStart_toStartOf="@+id/inPlaceholderNoList"
            app:layout_constraintTop_toBottomOf="@+id/inPlaceholderNoList" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
